--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
             <header >
                 <a href="index.html">
                 <img  src="assests/images/logo.png" alt="logo" height="60px" width="60px"></a>
-                <a href="" id="login" type="button" class="btn btn-light" data-toggle="modal" data-target="#modalLoginForm">LOGIN</a>
+                <a href="" id="login" type="button" class="btn btn-light" data-toggle="modal" data-target="#modalLoginForm" onclick="my_Function1()">LOGIN</a>
               
             </header>
     
@@ -163,5 +163,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="./scripts/list.js"></script>
     </body>
 </html>
